# ratzarr

./: CreateRelease.txt  Docs.txt  README.md  ReleaseNotes.md  pyproject.toml  ratzarr.py
.github/workflows/: alltests.yml
docs/: index.html  ratzarr.html
