# The installation requires pip>=23.0. If not, it will fail in rather
# cryptic ways (depending exactly what options are used).
#

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratzarr"
dynamic = ["version"]
authors = [
  {name = "Neil Flood"}
]
description = "Rough mimic of GDAL's RasterAttributeTable in a Zarr file"
readme = "README.md"
license = "MIT"

[project.scripts]
ratzarr_tests = "ratzarr:mainCmd"

[tool.setuptools]
py-modules = ["ratzarr"]

[tool.setuptools.dynamic]
version = {attr = "ratzarr.__version__"}

[project.urls]
Repository = "https://github.com/ubarsc/ratzarr.git"
